--- a/.github/workflows/notificate-deployments.yml
+++ b/.github/workflows/notificate-deployments.yml
@@ -14,9 +14,10 @@ jobs:
       - name: Send Slack Notification  
         if: success() 
         uses: slackapi/slack-github-action@v2.1.1
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEPLOYMENTS_NOTIFICATIONS_WEBHOOK_URL }}
         with:
-          webhook: ${{ secrets.SLACK_DEPLOYMENTS_NOTIFICATIONS_WEBHOOK_URL }}
-          channel-id: ${{ secrets.SLACK_DEPLOYMENTS_NOTIFICATIONS_CHANNEL }}
+          webhook-type: incoming-webhook
           payload: |
             {
               "text": "Deployment completed",
