--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "socket.io-client": "4.8.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "streamsaver": "^2.0.5",
+    "streamsaver": "=2.0.6",
     "url": "^0.11.3",
     "util": "^0.12.5",
     "uuid": "=8.3.2",
