--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "socket.io-client": "4.8.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "streamsaver": "2.0.5",
+    "streamsaver": "^2.0.5",
     "url": "^0.11.3",
     "util": "^0.12.5",
     "uuid": "=8.3.2",
@@ -150,7 +150,7 @@
     "cross-env": "^7.0.3",
     "crypto": "npm:crypto-browserify",
     "dotenv": "^16.4.5",
-    "eslint": "7.32.0",
+    "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
