feat: set staging environment for PR preview deployments
Configure PR preview builds to use staging environment by setting MODE and REACT_APP_NODE_ENV build args, preventing canonical domain redirects on preview deployments.

--- a/.github/workflows/deploy-pr-preview.yaml
+++ b/.github/workflows/deploy-pr-preview.yaml
@@ -28,6 +28,9 @@ jobs:
           file: ./infrastructure/preview.Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}-dev:preview-${{ github.event.number }}-${{ github.event.pull_request.head.sha }}
+          build-args: |
+            REACT_APP_NODE_ENV=staging
+            MODE=staging
   add_ready_for_preview_label:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
