feat: update stripe dependencies and remove legacy code

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@reduxjs/toolkit": "^1.6.0",
     "@sentry/react": "^8.55.0",
     "@sentry/tracing": "^7.120.3",
-    "@stripe/react-stripe-js": "^2.7.1",
-    "@stripe/stripe-js": "^3.5.0",
+    "@stripe/react-stripe-js": "5.2.0",
+    "@stripe/stripe-js": "8.1.0",
     "@typeform/embed-react": "^1.19.0",
     "@types/uuid": "^8.3.4",
     "@vitest/browser": "^2.1.9",
