--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@faker-js/faker": "^9.0.0",
-    "@internxt/eslint-config-internxt": "1.0.10",
+    "@internxt/eslint-config-internxt": "2.0.1",
     "@internxt/prettier-config": "internxt/prettier-config#v1.0.2",
     "@playwright/test": "^1.44.1",
     "@svgr/rollup": "^8.1.0",
@@ -150,16 +150,16 @@
     "cross-env": "^7.0.3",
     "crypto": "npm:crypto-browserify",
     "dotenv": "^16.4.5",
-    "eslint": "^7.32.0",
+    "eslint": "9.37.0",
     "husky": "^7.0.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "sass": "^1.32.4",
-    "stylelint": "^16.10.0",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-scss": "^6.8.1",
+    "stylelint": "16.25.0",
+    "stylelint-config-standard": "39.0.1",
+    "stylelint-scss": "6.12.1",
     "tailwindcss": "^3.3.4",
     "typescript": "^4.4.2",
     "vite": "=6.3.6",
