--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@dashlane/pqc-kem-kyber512-browser": "^1.0.0",
     "@headlessui/react": "1.7.5",
-    "@iconscout/react-unicons": "^1.1.6",
+    "@iconscout/react-unicons": "2.2.5",
     "@internxt/css-config": "1.0.3",
     "@internxt/lib": "1.3.1",
     "@internxt/sdk": "=1.11.11",
