--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "lint:scss:fix": "yarn run lint:scss --fix",
     "lint": "yarn run lint:ts && yarn run lint:scss",
     "lint:fix": "yarn run lint:ts:fix && yarn run lint:scss:fix",
+    "find-deadcode": "ts-prune -e",
     "analyze": "cross-env ANALYZE=true yarn build",
     "add:npmrc": "echo \"registry=https://registry.yarnpkg.com/\" >> .npmrc && echo \"@internxt:registry=https://npm.pkg.github.com\" >> .npmrc && echo \"//npm.pkg.github.com/:_authToken=$NPM_TOKEN\" >> .npmrc && echo \"always-auth=true\" >> .npmrc"
   },
@@ -161,6 +162,7 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-scss": "^6.8.1",
     "tailwindcss": "^3.3.4",
+    "ts-prune": "^0.10.3",
     "typescript": "^4.4.2",
     "vite": "=6.3.6",
     "vite-plugin-bundle-obfuscator": "^1.7.0",
