refactor: restructure checkout module from app/payment to views/Checkout
  Move payment-related components, services, hooks, and utilities from src/app/payment to
  src/views/Checkout to improve module organization and align with the views-based architecture
  pattern used by other features.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -7,4 +7,4 @@
 /src/upload.worker.ts @internxt/cryptography
 /src/app/analytics/ @internxt/marketing
 /src/app/theme/userThemes.service.ts @internxt/marketing
-/src/app/payment @xabg2
+/src/views/Checkout @xabg2
