--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@headlessui/react": "1.7.5",
     "@iconscout/react-unicons": "^1.1.6",
     "@internxt/css-config": "1.0.3",
-    "@internxt/lib": "1.3.1",
+    "@internxt/lib": "1.4.1",
     "@internxt/sdk": "=1.11.11",
     "@internxt/ui": "0.0.26",
     "@phosphor-icons/react": "^2.1.7",
@@ -18,7 +18,6 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
     "@typeform/embed-react": "^1.19.0",
-    "@types/uuid": "^8.3.4",
     "@vitest/browser": "^2.1.9",
     "assert": "^2.1.0",
     "axios": "^1.12.0",
@@ -77,7 +76,7 @@
     "streamsaver": "^2.0.5",
     "url": "^0.11.3",
     "util": "^0.12.5",
-    "uuid": "=8.3.2",
+    "uuid": "^11.1.0",
     "web-vitals": "^0.2.4",
     "xlsx-preview": "^1.0.4"
   },
