--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "vite": "=6.3.6",
     "vite-plugin-bundle-obfuscator": "^1.7.0",
     "vite-plugin-node-polyfills": "=0.23.0",
+    "vite-plugin-pwa": "^1.1.0",
     "vite-plugin-static-copy": "^3.1.2",
     "vite-plugin-svgr": "^4.3.0",
     "vitest": "2.1.9",
