Added code owners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
-*       @CandelR
+*       @CandelR @xabg2 @larryrider
 
 /src/app/network/ @internxt/cryptography
 /src/app/crypto/ @internxt/cryptography
