update sdk, update internext-crypto

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@internxt/css-config": "1.0.3",
     "@internxt/lib": "1.4.1",
-    "@internxt/sdk": "=1.11.11",
+    "@internxt/sdk": "=1.11.13",
     "@internxt/ui": "0.0.26",
     "@phosphor-icons/react": "^2.1.7",
     "@popperjs/core": "^2.11.6",
@@ -39,7 +39,7 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.2.0",
     "idb": "^6.1.5",
-    "internxt-crypto": "0.0.8-alpha",
+    "internxt-crypto": "https://github.com/internxt/crypto/releases/download/v.0.0.10/internxt-crypto-0.0.10-alpha.tgz",
     "js-file-download": "^0.4.12",
     "lint-staged": "^13.1.0",
     "lodash": "^4.17.21",
@@ -101,7 +101,7 @@
     "lint:ts": "eslint \"./{src,test}/**/*.{ts,tsx}\"",
     "lint:ts:fix": "yarn run lint:ts --fix",
     "lint:scss": "stylelint \"src/**/*.{css,scss}\"",
-    "lint:scss:fix": "yarn run lint:scss --fix",
+    "lint:scss:fix": "yarn run lint:scss --fix", 
     "lint": "yarn run lint:ts && yarn run lint:scss",
     "lint:fix": "yarn run lint:ts:fix && yarn run lint:scss:fix",
     "analyze": "cross-env ANALYZE=true yarn build",
