fix crypto package link

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.2.0",
     "idb": "^6.1.5",
-    "internxt-crypto": "https://github.com/internxt/crypto/releases/download/v.0.0.10/internxt-crypto-0.0.10-alpha.tgz",
+    "internxt-crypto": "https://github.com/internxt/crypto/releases/download/v.0.0.10-alpha/internxt-crypto-0.0.10-alpha.tgz",
     "js-file-download": "^0.4.12",
     "lint-staged": "^13.1.0",
     "lodash": "^4.17.21",
